# SmartFileOrganizer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  project Overview.md  project.md
include/: cli.h  errors.h  file_ops.h  file_type_detector.h  organize.h  utils.h  utils.h~
include/sound_files/: get_sound_file_info.h
src/: cli.c  file_ops.c  file_type_detector.c  main.c  organize.c  utils.c
src/file_type_detection/: file_type_detector.c
src/file_type_detection/sound_files/: get_sound_file_info.c
tests/: log_suite_file_type_detector-Listing.xml  log_suite_file_type_detector-Results.xml  tests_file_type_detector.c
